# fast-mingle

./: BundleOperation.h  CMakeLists.txt  Edge.cpp  Edge.cpp.orig  Edge.h  EdgeAndBundleOperationType.h  EdgeBundleTree.cpp  EdgeBundleTree.h  EdgeBundler.cpp  EdgeBundler.h  EdgeGraph.cpp  EdgeGraph.h  EdgeIdGenerator.cpp  EdgeIdGenerator.h  EdgeNode.cpp  EdgeNode.h  GetTotalInkWhenMovedByFraction.cpp  GetTotalInkWhenMovedByFraction.h  Graph.cpp  Graph.cpp.orig  Graph.h  InkAndBundle.h  InkBundleAndBundleOperationType.h  NeighborAndBundle.h  Point.cpp  Point.h  PointBiMultiMap.cpp  PointBiMultiMap.h  PointOrStar.cpp  PointOrStar.h  README.md  Util.cpp  Util.h  fastsqrt.h  main.cpp  main.h  plot_igraph.py  renderer_main.cpp  renderer_main.h
ann_1.1.2/: Makefile
mingle_pymodule/: Graph.c  Graph.cpp  Graph.h  Vertex.h  _mingle.c  makefile  mingle.c  mingle.i  setup.py
test_data/: split_node_edges.py
test_data/links/: coordinates.tsv  format_transcriber.py
test_data/testcrossed_list/: testcrossed_list_edges.txt  testcrossed_list_vertices.txt
test_data/trivial_list/: trivial_list_edges.txt  trivial_list_vertices.txt
test_data/whiteBoard_list/: output_edgesTest.txt  output_verticesTest.txt  semantic_edges.txt  textEdges.txt  textNodes.txt
test_data/world_list/: world_list_edges.txt  world_list_vertices.txt
